--- a/presto-accumulo/pom.xml
+++ b/presto-accumulo/pom.xml
@@ -358,5 +358,26 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>skipJdk17IncompatibleTests</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/TestAccumuloDistributedQueries.java</exclude>
+                                <exclude>**/TestAccumuloIntegrationSmokeTest.java</exclude>
+                                <exclude>**/TestAccumuloClient.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
